[gd_scene load_steps=13 format=3 uid="uid://0jxmw3vgonen"]

[ext_resource type="Script" path="res://sectio.gd" id="1_0w1n6"]
[ext_resource type="Texture2D" uid="uid://qr14kucrashs" path="res://icon.svg" id="2_p1h18"]
[ext_resource type="Texture2D" uid="uid://c4jjot82jo530" path="res://assets/background.png" id="3_r4jjb"]
[ext_resource type="Texture2D" uid="uid://dl5ksom3h2v7c" path="res://assets/line_dashed.png" id="5_fn37b"]
[ext_resource type="Texture2D" uid="uid://chyx8gsyah2ww" path="res://assets/ring_color.png" id="6_l5600"]
[ext_resource type="Theme" uid="uid://ct12aengaa7cl" path="res://themes/default_theme.tres" id="7_t73ym"]
[ext_resource type="Texture2D" uid="uid://bfkug38ydc0vm" path="res://assets/arrow.png" id="8_67oed"]

[sub_resource type="Shader" id="Shader_qyxs7"]
code = "shader_type canvas_item;

uniform float scrolling_speed = 1.0;
uniform bool on = false;


void vertex() {
	// Called for every vertex the material is visible on.
}

void fragment() {
	if (on)
	{
		vec2 moving_uv = vec2(UV.x-(TIME * scrolling_speed), UV.y);
		vec4 in_tex = texture(TEXTURE, moving_uv);
		COLOR = in_tex;
	}
	}

void light() {
	// Called for every pixel for every light affecting the CanvasItem.
}
"

[sub_resource type="ShaderMaterial" id="ShaderMaterial_8pecw"]
shader = SubResource("Shader_qyxs7")
shader_parameter/scrolling_speed = 1.0
shader_parameter/on = true

[sub_resource type="Shader" id="Shader_j8x1m"]
code = "shader_type canvas_item;

uniform float scrolling_speed = 1.0;
uniform bool on = true;


void vertex() {
	// Called for every vertex the material is visible on.
}

void fragment() {
	if (on)
	{
		vec2 moving_uv = vec2(UV.x-(TIME * scrolling_speed), UV.y);
		vec4 in_tex = texture(TEXTURE, moving_uv);
		COLOR = in_tex;
	}
	}

void light() {
	// Called for every pixel for every light affecting the CanvasItem.
}
"

[sub_resource type="ShaderMaterial" id="ShaderMaterial_el8v3"]
shader = SubResource("Shader_j8x1m")
shader_parameter/scrolling_speed = 1.0
shader_parameter/on = true

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_cec82"]
load_path = "res://.godot/imported/line_dashed.png-17e21fa0a62bea531e4150bcc726298c.ctex"

[node name="Sectio" type="Node2D"]
position = Vector2(1039, 654)
script = ExtResource("1_0w1n6")
Treachery = Color(0.196078, 0.270588, 0.215686, 1)
Fraud = Color(0.431373, 0.168627, 0, 1)
TheViolent = Color(0.415686, 0.0235294, 0, 1)
Heretics = Color(0.313726, 0.215686, 0, 1)
TheWrathful = Color(0.0745098, 0, 0.721569, 1)
TheGreedy = Color(0.0627451, 0.27451, 0, 1)
TheGluttonous = Color(0.403922, 0, 0.498039, 1)
TheLustful = Color(0.341176, 0.176471, 0.254902, 1)
Limbo = Color(0.235294, 0.211765, 0.223529, 1)

[node name="PolygonContainer" type="Node2D" parent="."]
unique_name_in_owner = true

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Area2D"]
unique_name_in_owner = true
visible = false

[node name="PlayerLabel" type="Label" parent="."]
visible = false
offset_left = -9.0
offset_top = -16.0
offset_right = 31.0
offset_bottom = 7.0

[node name="Polygon2D" type="Polygon2D" parent="."]
use_parent_material = true
texture = ExtResource("3_r4jjb")
polygon = PackedVector2Array(-679.769, -138.751, -604.256, -88.3269, -525.021, -43.98, -442.552, -5.98328, -357.357, 25.4293, -269.962, 50.0642, -180.904, 67.7698, -90.7312, 78.437, 0, 82, 90.7312, 78.437, 180.904, 67.7698, 269.962, 50.0642, 357.357, 25.4293, 442.552, -5.98328, 525.021, -43.98, 604.256, -88.3269, 679.769, -138.751, 583.415, -271.46, 518.605, -228.184, 450.601, -190.123, 379.822, -157.512, 306.703, -130.552, 231.696, -109.409, 155.261, -94.2131, 77.8705, -85.058, 0, -82, -77.8705, -85.058, -155.261, -94.2131, -231.696, -109.409, -306.703, -130.552, -379.822, -157.512, -450.601, -190.123, -518.605, -228.184, -583.415, -271.46)

[node name="Polygon2D2" type="Polygon2D" parent="."]
modulate = Color(1, 1, 1, 0)
polygon = PackedVector2Array(-679.769, -138.751, -604.256, -88.3269, -525.021, -43.98, -442.552, -5.98328, -357.357, 25.4293, -269.962, 50.0642, -180.904, 67.7698, -90.7312, 78.437, 0, 82, 90.7312, 78.437, 180.904, 67.7698, 269.962, 50.0642, 357.357, 25.4293, 442.552, -5.98328, 525.021, -43.98, 604.256, -88.3269, 679.769, -138.751, 583.415, -271.46, 518.605, -228.184, 450.601, -190.123, 379.822, -157.512, 306.703, -130.552, 231.696, -109.409, 155.261, -94.2131, 77.8705, -85.058, 0, -82, -77.8705, -85.058, -155.261, -94.2131, -231.696, -109.409, -306.703, -130.552, -379.822, -157.512, -450.601, -190.123, -518.605, -228.184, -583.415, -271.46)

[node name="Sprite2D" type="Sprite2D" parent="."]
visible = false
position = Vector2(0, -3)
scale = Vector2(0.25, 0.25)
texture = ExtResource("2_p1h18")

[node name="UnitsNode2D" type="Node2D" parent="."]
unique_name_in_owner = true

[node name="UnitsMarginContainer" type="MarginContainer" parent="."]
unique_name_in_owner = true
visible = false
top_level = true
offset_right = 318.0
offset_bottom = 144.0

[node name="ColorRect" type="ColorRect" parent="UnitsMarginContainer"]
layout_mode = 2
color = Color(0.14902, 0.14902, 0.14902, 1)

[node name="MarginContainer" type="MarginContainer" parent="UnitsMarginContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="UnitsVBoxContainer" type="VBoxContainer" parent="UnitsMarginContainer/MarginContainer"]
layout_mode = 2

[node name="NameLabel" type="Label" parent="UnitsMarginContainer/MarginContainer/UnitsVBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "fasdfs"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="UnitsMarginContainer/MarginContainer/UnitsVBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="UnitsMarginContainer/MarginContainer/UnitsVBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Souls per Turn:"

[node name="SoulsLabel" type="Label" parent="UnitsMarginContainer/MarginContainer/UnitsVBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="YourUnitsLabel" type="Label" parent="UnitsMarginContainer/MarginContainer/UnitsVBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "The Units of your Triumphirate."
horizontal_alignment = 1

[node name="YourUnitsHBoxContainer" type="HBoxContainer" parent="UnitsMarginContainer/MarginContainer/UnitsVBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
alignment = 1

[node name="EnemyUnitsLabel" type="Label" parent="UnitsMarginContainer/MarginContainer/UnitsVBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "The Units of the enemy Triumphirates."
horizontal_alignment = 1

[node name="EnemyUnitsHBoxContainer" type="HBoxContainer" parent="UnitsMarginContainer/MarginContainer/UnitsVBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
alignment = 1

[node name="CwMarker2D" type="Marker2D" parent="."]
unique_name_in_owner = true

[node name="CcwMarker2D2" type="Marker2D" parent="."]
unique_name_in_owner = true

[node name="Line2D" type="Line2D" parent="."]
unique_name_in_owner = true
visible = false
texture_repeat = 2
material = SubResource("ShaderMaterial_8pecw")
position = Vector2(-42, -329)
points = PackedVector2Array(0, 0, 100, 0, 200, 100, 0, 200, 0, 0)
closed = true
texture = ExtResource("5_fn37b")
texture_mode = 1
joint_mode = 2

[node name="Line2D2" type="Line2D" parent="."]
unique_name_in_owner = true
visible = false
z_index = 1
texture_repeat = 2
material = SubResource("ShaderMaterial_el8v3")
points = PackedVector2Array(0, 0, 100, 0, 200, 100, 0, 200, 0, 0)
closed = true
width = 20.0
texture = SubResource("CompressedTexture2D_cec82")
texture_mode = 1
joint_mode = 2

[node name="Node2D" type="Node2D" parent="."]

[node name="SoulsRing" type="Sprite2D" parent="Node2D"]
unique_name_in_owner = true
texture = ExtResource("6_l5600")

[node name="SoulsRingLabel" type="Label" parent="Node2D"]
unique_name_in_owner = true
modulate = Color(0, 0, 0, 1)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -36.0
offset_right = 20.0
offset_bottom = 36.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
theme = ExtResource("7_t73ym")
theme_override_font_sizes/font_size = 50
text = "1"
horizontal_alignment = 1

[node name="Node2D2" type="Node2D" parent="."]

[node name="ArrowRightSprite2D" type="Sprite2D" parent="Node2D2"]
unique_name_in_owner = true
visible = false
scale = Vector2(0.3, 0.3)
texture = ExtResource("8_67oed")

[node name="ArrowLeftSprite2D" type="Sprite2D" parent="Node2D2"]
unique_name_in_owner = true
visible = false
scale = Vector2(0.3, 0.3)
texture = ExtResource("8_67oed")
flip_h = true

[node name="ArrowDownSprite2D" type="Sprite2D" parent="Node2D2"]
unique_name_in_owner = true
visible = false
rotation = -1.5708
scale = Vector2(0.3, 0.3)
texture = ExtResource("8_67oed")

[node name="ArrowUpSprite2D" type="Sprite2D" parent="Node2D2"]
unique_name_in_owner = true
visible = false
rotation = 1.5708
scale = Vector2(0.3, 0.3)
texture = ExtResource("8_67oed")

[connection signal="input_event" from="Area2D" to="." method="_on_area_2d_input_event"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
